minor efficiency fixes, duo to code being dependent on outdated structs

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,2 @@
-/home/jjonkhans/code_base/neural_netwoks/basic-neural-network-in-C/data/archive (1)/mnist_test.csv
-/home/jjonkhans/code_base/neural_netwoks/basic-neural-network-in-C/data/archive (1)/mnist_train.csv
+/data/archive (1)/mnist_test.csv
+/data/archive (1)/mnist_train.csv
